<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sushi Ninja</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="hello">Second Iteration</string>
    
    
    <string name="mode"><b>Please select optional game settings.</b></string>
    <string name="start">START</string>
    <string name="restart">Play Again!</string>
	<string name="end">GTFO!</string>
	<string name="over">Game Over!</string>
	
	<string name="fast">Fast</string>
	<string name="normal">Normal</string>
	<string name="slow">Slow</string>
	<string name="next">Next Level!</string>
	<string name="small">Small</string>
	<string name="medium">Medium</string>
	<string name="large">Large</string>
	
	<string name="slice">Slice the Sushi!</string>
	
	
	
	<string name="bigger">Bigger Sushi</string>
	<string name="smaller">Smaller Sushi</string>
	<color name="white">#FFFFFF</color>    
	

</resources>