<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_red" >

    <Button
        android:id="@+id/slice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/size"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:layout_marginTop="83dp"
        android:text="@string/slice" />
    
      <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="202dp"
        android:background = "@drawable/backbutton"
        />

    <RadioGroup
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/speed"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:onClick="onSizeRadioButtonClicked"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:onClick="onSizeRadioButtonClicked"
            android:text="@string/large" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/size"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:onClick="onSpeedRadioButtonClicked"
            android:text="@string/slow" />

        <RadioButton
            android:id="@+id/fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:onClick="onSpeedRadioButtonClicked"
            android:text="@string/fast" />
    </RadioGroup>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/speed"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:layout_marginBottom="17dp"
        android:text="@string/mode"
        android:textColor="@color/black" />

    </RelativeLayout>